[project]
name = "vmc-jax"
version = "0.1.0"
description = "VMC in JAX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda12]>=0.4.31; sys_platform == 'linux'",
    "jax>=0.4.31; sys_platform == 'darwin'",
    "matplotlib>=3.9.2",
    "optax>=0.2.3",
    "tqdm>=4.66.5",
    "pyscf>=2.7.0",
    "equinox>=0.11.7",
    "pytest>=8.3.3",
]

[tool.pyright]
include = ["vmc_jax"]